fix: avoid text wrap in conneciton data title 💄

--- a/src/styles/accountConnectionData.styl
+++ b/src/styles/accountConnectionData.styl
@@ -7,6 +7,7 @@
 
         h4
             margin-bottom 1rem
+            white-space nowrap
 
     .col-account-connection-data-access
         margin-top 0
